@@ -1,0 +1,10 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    i18n_domain="ftw.solr">
+
+  <permission
+      id="ftw.solr.EditSearchSettings"
+      title="ftw.solr: Edit search settings"
+      />
+
+</configure>
